// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`patch diffs values 1`] = `
{
  "foo": {
    "a": {
      "$delete": true,
    },
    "b": {
      "$delete": true,
    },
    "c": {
      "$delete": true,
    },
    "d": true,
  },
  "n": [
    2,
  ],
  "s": "hello world",
  "x": "xy",
}
`;

exports[`patch gets update keys 1`] = `
[
  "d",
  "s",
  "x",
  "foo",
  "bar.obj.baz",
  "n",
  "list.0.foo",
]
`;

exports[`patch patches primitives 1`] = `
{
  "foo": {
    "a": true,
    "b": true,
    "c": [
      "y",
    ],
  },
  "n": 2,
  "s": "world",
  "x": "x",
}
`;

exports[`patch patches with $ops 1`] = `
{
  "foo": {
    "d": true,
  },
  "n": 1,
  "s": "hello world",
  "x": "xy",
}
`;

exports[`patch revises diffs 1`] = `
{
  "bar": {
    "obj": {
      "baz": true,
    },
  },
  "d": true,
  "foo": {
    "a": false,
    "b": true,
  },
  "list": {
    "0": {
      "foo": false,
    },
  },
  "n": [
    1,
  ],
  "s": "hello",
  "x": "x",
}
`;
